# VPN-Follower

./: .gitignore  CLAUDE.md  README.md  SIGNING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
packaging/: MOBILE.md  RELEASE_NOTES.md  entry.py  vpnfollower.spec
scripts/: build_desktop.sh  make_icons.py  setup-azure-signing.sh
tests/: test_report.py  test_resolve.py  test_server.py  test_vpn_heuristics.py
vpnfollower/: __init__.py  __main__.py  cli.py  http.py  models.py  orchestrator.py  report.py  server.py
vpnfollower/sources/: __init__.py  dnsbl.py  ipapi.py  ports.py  rdap.py  rdns.py  resolve.py  tor.py  vpn_heuristics.py
vpnfollower/web/: app.js  index.html  manifest.webmanifest  service-worker.js  styles.css
